--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "numpy>=2.4.2",
     "torch>=2.10.0",
     "torchdeq>=0.1.0",
+    "tqdm>=4.67.3",
 ]
 
 [project.optional-dependencies]
